--- a/style.css
+++ b/style.css
@@ -261,7 +261,8 @@
     display: inline-block;
     float:right;
     margin-right: 11%;
-    margin-top: 9%;
+    position: relative;
+    top:20rem;
 
 }
 
